--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "less": "~1.3.3",
     "async": "~0.2.7",
     "mkdirp": "~0.3.5"
+  },
+  "scripts": {
+      "test": "node_modules/.bin/mocha --compilers coffee:coffee-script src/tests/"
   }
 }
