--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 install: "npm install"
-script: "TIMEOUT=2000 npm test"
+script: "TIMEOUT=5000 npm test"
 node_js:
-  - "0.8"
-  - "0.10"
+    - "0.8"
+    - "0.10"
+
+notifications:
+    irc:
+        - "irc.freenode.net#x1a0"
+
