--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 install: "npm install"
-script: "TIMEOUT=2000 npm test"
+script: "DELAY=1000 npm test"
 node_js:
     - "0.8"
     - "0.10"
