--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "license": "BSD",
   "devDependencies": {
     "coffee-script": "~1.6.2",
-    "mocha": "~1.9.0"
-  },
-  "dependencies": {
-    "watchr": "~2.4.3",
-    "less": "~1.3.3",
+    "mocha": "~1.9.0",
     "async": "~0.2.7",
     "mkdirp": "~0.3.5"
   },
+  "dependencies": {
+    "less": "~1.3.3"
+  },
   "scripts": {
-      "test": "node_modules/.bin/mocha --compilers coffee:coffee-script src/tests/"
+    "test": "node_modules/.bin/mocha --compilers coffee:coffee-script src/tests/"
   }
 }
