--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "devDependencies": {
     "coffee-script": "~1.6.2",
     "mocha": "~1.9.0",
-    "async": "~0.2.7",
-    "mkdirp": "~0.3.5"
+    "async": "~0.2.7"
   },
   "dependencies": {
     "less": "~1.3.3"
