--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lessr",
   "version": "0.0.1",
   "description": "Watch less files and compile into css.",
-  "main": "./out/lib/lessr.js",
+  "main": "./lib/lessr.js",
   "repository": "",
   "keywords": [
     "less",
@@ -19,6 +19,6 @@
     "less": "~1.3.3"
   },
   "scripts": {
-    "test": "node_modules/.bin/mocha --compilers coffee:coffee-script src/tests/"
+    "test": "node_modules/.bin/mocha --compilers coffee:coffee-script tests/"
   }
 }
